--- a/header.css
+++ b/header.css
@@ -1,8 +1,15 @@
-
+/*Just removing default browser padding/margin*/
+html,
+body {
+    padding: 0;
+    margin: 0;
+/*    color: #ebebeb;*/
+}
 /* header */
 .topnav {
   overflow: auto;
   background-color: #e9e9e9;
+/*      position: relative;*/
 }
 
 .topnav img {
@@ -13,6 +20,7 @@
   padding: 14px 16px;
 /*  text-decoration: none;*/
 /*  font-size: 17px;*/
+   
 }
 
 .topnav p {
@@ -27,6 +35,7 @@
   margin-bottom: 1em;
   margin-left: 0;
   margin-right: 0;
+   
 }
 
 .topnav a:hover {
@@ -48,6 +57,7 @@
   margin-top: 8px;
   font-size: 17px;
   border: none;
+      
 }
 
 .topnav .search-container button {
@@ -59,6 +69,7 @@
   font-size: 17px;
   border: none;
   cursor: pointer;
+    
 }
 
 .topnav .search-container button:hover {
@@ -86,6 +97,7 @@ section {
     display: -webkit-flex;
     display: flex;
     background-color: #f1f1f1;
+   
 }
 
 /* Style the navigation menu */
@@ -95,6 +107,9 @@ nav {
     flex: 0.6;
 /*     background-color: #f1f1f1;*/
    /* padding: 20px;*/
+    background-color: lightgray;
+
+     
 }
 
 /* Style the navigation buttons*/
@@ -108,10 +123,15 @@ nav {
     font-size: 20px;
     display: block; /* Make the buttons appear below each other */
     text-align: center;
+/*    background-color: white;*/
+        background-color: lightgray;
+
+    
+
 }
 /* Style the navigation buttons*/
 .btn-group button:not(:last-child) {
-    border-bottom: none; /* Prevent double borders */
+ 
 }
 
 /* Add a background color on hover, Style the navigation buttons */
@@ -125,18 +145,70 @@ article {
     flex: 3;
     background-color: #f1f1f1;
     padding: 10px;
+     
 }
 .mainDiv{
     display: : flex;
     display: -webkit-flex;
 /*    background-color: aqua;*/
     flex-direction:  row
+       width: 100%;
+    
+    
+   
+    overflow: hidden;
+    height: 100vh;
+    margin-top: -100px;
+    padding-top: 100px;
+    position: relative;
+    width: 100%;
+    backface-visibility: hidden;
+    will-change: overflow;
+}
+/*make the 3 sections scrollable*/
+#dynamic-list {
+     overflow: auto;
+    
+  height: 84vh;
+/*    padding: .5rem;*/
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none; 
+     -ms-overflow-style: none; 
+    width: inherit;
+    overflow-x: hidden;
+}
+}
+* {
+    box-sizing: border-box;
+}
+.content{
+/*
+   display: : flex;
+    display: -webkit-flex;  
+    flex-direction:  vertical;
+*/
+        padding-top: 33px;
+       overflow: auto;
+  height: 84vh;
+/*    padding: .5rem;*/
+/*
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none; 
+*/
+/*    width: inherit;*/
+/*    overflow-x: hidden;*/
 }
 .emails{
+    border-bottom-color: aliceblue;
+    border-bottom-width: 1px;
     display: : flex;
     display: -webkit-flex;
-/*    background-color: aqua;*/
-    flex-direction:  row;     
+
+    flex-direction:  column;
+/*    align-items: center;*/
+    /*height: 50px;*/
+    /*padding-top: 10px; */ 
+      
 }
 
 .searchRow{
@@ -145,6 +217,44 @@ article {
 /*    background-color: darkred;*/
     flex-direction:  row;
     justify-content: space-between;
+    padding-top: 11px;
+    padding-left : 50px;
+    padding-right: 50px;
+    padding-bottom: 19px;
+    
+     background-color: whitesmoke;
+    border-bottom: 1px solid darkgray;
+    
+
+}
+.settings{
+    display: : flex;
+    display: -webkit-flex;
+/*    background-color: darkred;*/
+    flex-direction:  column;
+    justify-content: space-between;
+    
+      clear: left;
+/*
+    padding-top: 10px;
+    padding-left : 50px;
+    padding-right: 50px;
+     width: 30%;
+*/
+/*    -webkit-flex : 5;*/
+/*    flex : 5;*/
+/*    flex-basis: 15;*/
+/*
+    margin-bottom: 10px;
+    margin-top: 5px;
+*/
+   
+}
+.topNavBar{
+    display: : flex;
+    display: -webkit-flex;
+    justify-content: flex-end;
+    flex-direction: row;
     padding-top: 10px;
     padding-left : 50px;
     padding-right: 50px;
@@ -154,6 +264,11 @@ article {
     display: -webkit-flex;
     flex-direction:  row;
     justify-content: space-around;
+    background-color: whitesmoke;
+    border-bottom: 1px solid darkgray;
+    
+   
+   
 
 }
 .listItem{
@@ -166,15 +281,23 @@ article {
     align-items: center;
     height: 50px;
     padding-top: 10px;
+
    
 /*     border: 0.8px solid black;*/
 }
+
 .topNav{
-    border-right-color: beige;
-    border-right-width: 1px;
-    border-right: 1px solid;
-    -webkit-flex : 1;
-    flex : 1;
+/*    border-right-color: beige;*/
+    border-right-width: 3px;
+/*    border-right: 1px solid;*/
+    -webkit-flex : 2;
+    flex : 2;
+    
+     cursor: w-resize;
+    background-color: lightgray;
+   
+   
+
 }
 .emailSummary{
    padding-bottom: 15px;
@@ -185,27 +308,52 @@ article {
 /*    background-color: darkred;*/
     flex-direction:  row;
     justify-content: space-between;
+     
 }
 .sideNav{
 /*    background-color:aqua;*/
-    -webkit-flex : 4;
-    flex : 4;
+    -webkit-flex : 2;
+    flex : 2;
+    flex-direction:  column;
+     border-right-width: 1px;
+    border-right: 1px solid lightgray;
+/*   min-width: 320px;*/
+    border-color: whitesmoke;
+    
+    
+      
 }
-
+.emails{
+    -webkit-flex : 5;
+    flex : 5;
+    flex-direction:  column;
+    justify-content: flex-start;
+/*     min-width: 500px;*/
+    
+ 
+}
+#logo{
+    padding-top: 0px;
+     padding-bottom: 0px;
+    margin-top: 0px;
+}
 li img {
   float: left;
   margin: 0 15px 0 0;
+
 }
  
 li p {
   font: 200 12px/1.5 Georgia, Times New Roman, serif;
   padding-right: 38px;
+      
 }
  
 
 li:hover {
   background-color: azure;
   cursor: pointer;
+    
 }
 
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
@@ -216,3 +364,17 @@ li:hover {
     }
 
 }
+ul.dynamic-list {
+    background-color: lightblue;
+    width: 110px;
+  
+/*    height: 110px;*/
+/*    overflow: scroll;*/
+}
+/*
+div.content {
+    background-color: lightblue;
+    width: 110px;
+    height: 110px;
+    overflow: scroll;
+}*/
