--- a/email_content.css
+++ b/email_content.css
@@ -1,21 +1,85 @@
-#subject{
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    padding:20px 5px 20px 5px;
+.Content_topNav{
+
+    border-bottom: 2px solid whitesmoke;
+      border-top: 2px solid whitesmoke;
+} 
+p, pre
+    {
+        padding: 0px 1px 1px 1px;
+/*        margin-top: 2px;*/
+/*         margin-bottom: 2px;*/
+    }
+#sender_content, #datetime_content
+    {
+        font-size: medium;
+/*        font-color:*/
+/*        color: black;*/
+/*        padding-right: 540px;*/
+/*        padding-bottom: 0px 0px 0px 0px;*/
+    }
+#sender_content, #datetime_content
+    {
+        padding-left: 0px;
+/*        padding-right: 540px;*/
+/*        padding-bottom: 0px 0px 0px 0px;*/
+          color: black;
+    }
+#datetime_content{
+    padding-right: 20px;
+    
 }
-body {
-        padding: 0;
-        margin: 0;
-}
-.container {
-    width:40%;
-    text-align:right;
-}
-.top{
+
+/*    #datetime_content{ padding-left: 500px;}*/
+.middle_content
+        {
+/*          padding-top: 5px; */
+/*             border-bottom: 2px solid whitesmoke;*/
+            padding-right: 5px;   padding-left: 5px; 
+            width : inherit;
+             white-space:pre-wrap;
+            background-color: lightgray;
+/*            margin-top: 5px;*/
+/*            
+              word-break: break-all;
+  white-space: normal;
+*/
+        }
+.st_line
+    {
         display: flex;
         flex-direction: row;
-        padding-bottom: 3px;
+        display: -webkit-flex;
+        justify-content: space-between;
+/*        padding-bottom: 2px;*/
+    }
+.content_content
+    {   
+          overflow: hidden;
+    display:flex;
+        flex-direction:  column;
+/*        align-items: flex-start;*/
+/*    padding-right: 20px;*/
+    }
+ body
+    {   
+          overflow: auto;
+    display:flex;
+          flex-direction:  column;
+        height: 84vh;
+/*    padding: .5rem;*/
+   
+    }
+html{
+     -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none; 
+     -ms-overflow-style: none; 
+    width: inherit;
+    overflow-x: hidden;
 }
-img , #sender , #to{
-        padding-right: 20px;
+.attachments_content{
+       border-bottom: 2px solid whitesmoke;
+}
+.attachment_Name{
+    padding-top: 0px;
+    margin-top: 0px;
 }
